JumpScript/tests/baselines/reference/initializersInDeclarations.errors.txt
tests/cases/conformance/externalModules/file1.d.jump(4,9): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/conformance/externalModules/file1.d.jump(5,16): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/conformance/externalModules/file1.d.jump(6,16): error TS1183: An implementation cannot be declared in ambient contexts.
tests/cases/conformance/externalModules/file1.d.jump(11,15): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/conformance/externalModules/file1.d.jump(12,15): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/conformance/externalModules/file1.d.jump(15,2): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/externalModules/file1.d.jump(17,16): error TS1039: Initializers are not allowed in ambient contexts.


==== tests/cases/conformance/externalModules/file1.d.jump (7 errors) ====
    // Errors: Initializers & statements in declaration file
    
    declare class Foo {
    	name = "test";
    	       ~~~~~~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    	"some prop" = 42;
    	              ~~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    	fn(): boolean {
    	              ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    		return false;
    	}
    }
    
    declare var x = [];
                  ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    declare var y = {};
                  ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    
    declare module M1 {
    	while(true);
    	~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    
    	export var v1 = () => false;
    	              ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    }